# neo-project

./: .gitignore  README.md  database.py  extract.py  filters.py  main.py  models.py  pyproject.toml  validation.py  write.py
docs/: CODE_REVIEW.md  EXECUTIVE_SUMMARY.md  EXERCISES.md
tests/: test_python_version.py
